--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -83,3 +83,10 @@ Package V2.0
   * [Comparing results from Munro weights & predictdb weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated.html)
   
   
+# LDL examples
+
+package v2.0
+
+* [Comparing single-group & multi-group for LDL – old PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare_oldpip.html)
+* [Comparing single-group & multi-group for LDL - new PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare.html)
+  
