--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,13 +21,6 @@ editor_options:
   * [Compare DENTIST and SuSiE_RSS for LD mismatch detection on example locus with manually changed z-scores](test_LD_mismatch_DENTIST_susierss.html)
   * [Compare LD mismatch filterng on real data](compare_LD_mismatch_filtering_real_data.html)
 
-# Single-tissue 
-
-Package V2.0
-
-  * [Rerun LDL-Liver, using expression weights from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/single_tissue_ldl_liver_munro.html)
-
-
 # Multi-tissue 
 
 Package V1.0
@@ -80,8 +73,12 @@ Package V2.0
   * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_summary.html)
   * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro.html)
   * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro_summary.html)
-  * [Comparing results from Munro weights & predictdb weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated.html)
   
+  
+  Comparing results from Munro weights & predictdb weights
+  
+  * [LDL + IBD: predictdb eQTL + sQTL VS Munro 6 modalities](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated.html)
+  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights.html)
   
 # LDL examples
 
