--- a/analysis/multi_group_compare_predictdb_munro_updated.Rmd
+++ b/analysis/multi_group_compare_predictdb_munro_updated.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Comparing results from Munro weights & predictdb weights"
+title: "Comparing predictdb & Munro: predictdb eQTL + sQTL VS Munro 6 modalities"
 author: "XSun"
 date: "2024-08-08"
 output:
